[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Background/Reward.png" type="Texture" id=1]
[ext_resource path="res://RewardScenes/CombatReward.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/buttonLong_blue.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/buttonLong_blue_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://RewardScenes/Card1Button.gd" type="Script" id=6]
[ext_resource path="res://Items/coin2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Cards/BordersAndBacks/Gold_Border.png" type="Texture" id=8]
[ext_resource path="res://RewardScenes/Card2Button.gd" type="Script" id=9]
[ext_resource path="res://RewardScenes/Card3Button.gd" type="Script" id=10]
[ext_resource path="res://RewardScenes/Card4Button.gd" type="Script" id=11]
[ext_resource path="res://RewardScenes/Card0Button.gd" type="Script" id=12]
[ext_resource path="res://RewardScenes/SkipButton.gd" type="Script" id=13]
[ext_resource path="res://Assets/GUI/buttonLong_grey.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 2
outline_color = Color( 0.027451, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 2
outline_color = Color( 0.027451, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0.027451, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 5 )

[node name="CombatReward" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511.828, 299.839 )
scale = Vector2( 0.799383, 0.832215 )
texture = ExtResource( 1 )

[node name="Cards" type="Node" parent="."]

[node name="Card0Button" type="TextureButton" parent="."]
margin_left = 175.0
margin_top = 310.286
margin_right = 365.0
margin_bottom = 359.286
rect_scale = Vector2( 0.402172, 0.74156 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 14 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label0" type="Label" parent="."]
margin_left = 175.0
margin_top = 310.0
margin_right = 251.0
margin_bottom = 346.0
custom_fonts/font = SubResource( 1 )
text = "Take"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card1Button" type="TextureButton" parent="."]
margin_left = 325.0
margin_top = 310.286
margin_right = 515.0
margin_bottom = 359.286
rect_scale = Vector2( 0.402172, 0.74156 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 14 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 325.0
margin_top = 310.0
margin_right = 401.0
margin_bottom = 346.0
custom_fonts/font = SubResource( 1 )
text = "Take"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2Button" type="TextureButton" parent="."]
margin_left = 475.0
margin_top = 310.286
margin_right = 665.0
margin_bottom = 359.286
rect_scale = Vector2( 0.402172, 0.74156 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 14 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 475.0
margin_top = 310.0
margin_right = 551.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 1 )
text = "Take"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card3Button" type="TextureButton" parent="."]
margin_left = 625.0
margin_top = 310.286
margin_right = 815.0
margin_bottom = 359.286
rect_scale = Vector2( 0.402172, 0.74156 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 14 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 625.0
margin_top = 310.0
margin_right = 702.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 1 )
text = "Take"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card4Button" type="TextureButton" parent="."]
margin_left = 775.0
margin_top = 310.286
margin_right = 965.0
margin_bottom = 359.286
rect_scale = Vector2( 0.402172, 0.74156 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 14 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 775.0
margin_top = 310.0
margin_right = 852.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 1 )
text = "Take"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseCardText" type="Label" parent="."]
margin_left = 336.0
margin_top = 4.0
margin_right = 689.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "You won! Pick a card to add to your deck..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldWonText" type="Label" parent="."]
margin_left = 387.0
margin_top = 450.801
margin_right = 636.0
margin_bottom = 508.801
custom_fonts/font = SubResource( 2 )
text = "       You gained X"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinSprite" type="Sprite" parent="."]
position = Vector2( 553.439, 479.499 )
scale = Vector2( 0.0304936, 0.0282003 )
texture = ExtResource( 7 )

[node name="SkipButton" type="TextureButton" parent="."]
margin_left = 901.176
margin_top = 541.83
margin_right = 1091.18
margin_bottom = 590.83
rect_scale = Vector2( 0.601205, 1.00625 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 14 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 903.0
margin_top = 546.0
margin_right = 1013.0
margin_bottom = 584.0
custom_fonts/font = SubResource( 1 )
text = "Skip"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border0" type="Sprite" parent="."]
position = Vector2( 164.293, 150 )
scale = Vector2( 2.50993, 2.4924 )
texture = ExtResource( 8 )
centered = false

[node name="Border0Label" type="Label" parent="."]
margin_left = 185.0
margin_top = 177.0
margin_right = 239.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 3 )
text = "8
Luck 
Req."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border1" type="Sprite" parent="."]
position = Vector2( 315, 150 )
scale = Vector2( 2.50993, 2.4924 )
texture = ExtResource( 8 )
centered = false

[node name="Border1Label" type="Label" parent="."]
margin_left = 337.0
margin_top = 177.0
margin_right = 393.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 3 )
text = "4
Luck 
Req."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border2" type="Sprite" parent="."]
position = Vector2( 465, 150 )
scale = Vector2( 2.50993, 2.4924 )
texture = ExtResource( 8 )
centered = false

[node name="Border3" type="Sprite" parent="."]
position = Vector2( 615, 150 )
scale = Vector2( 2.50993, 2.4924 )
texture = ExtResource( 8 )
centered = false

[node name="Border3Label" type="Label" parent="."]
margin_left = 635.912
margin_top = 176.625
margin_right = 691.912
margin_bottom = 248.625
custom_fonts/font = SubResource( 3 )
text = "6
Luck 
Req."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border4" type="Sprite" parent="."]
position = Vector2( 765, 150 )
scale = Vector2( 2.50993, 2.4924 )
texture = ExtResource( 8 )
centered = false

[node name="Border4Label" type="Label" parent="."]
margin_left = 785.128
margin_top = 177.022
margin_right = 841.128
margin_bottom = 249.022
custom_fonts/font = SubResource( 3 )
text = "10
Luck 
Req."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
